// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Renders the UI snapshot correctly 1`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-card"
  id="regularCard"
>
  <div
    className="css-1xdhyk6"
    data-cardwrapper={true}
    data-testid="ds-cardWrapper"
  >
    <div
      className="css-0"
      data-imagewrapper={true}
      data-testid="ds-cardImage"
    >
      <div
        className="css-0"
        data-testid="ds-image"
        id="img-id-regularCard"
      >
        <img
          alt="Alt text"
          className="css-1xdhyk6"
          id="img-id-regularCard"
          src="https://images.nypl.org/index.php?id=swope_243048&t=r"
        />
      </div>
    </div>
    <div
      className="css-0"
      data-body={true}
    >
      <h3
        className="chakra-heading css-1u8qly9"
        data-testid="ds-heading"
        id="heading1"
        layout="column"
      >
        The Card Heading
      </h3>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardContent"
      >
        middle column content
      </div>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardActions"
      >
        <button
          className="chakra-button css-1xdhyk6"
          data-testid="ds-button"
          id="button1"
          onClick={[Function]}
          type="submit"
        >
          Example CTA
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 2`] = `
<div
  className="edition-card css-1xdhyk6"
  data-testid="ds-card"
  id="cardWithExtendedStyles"
>
  <div
    className="css-1xdhyk6"
    data-cardwrapper={true}
    data-testid="ds-cardWrapper"
  >
    <div
      className="css-0"
      data-imagewrapper={true}
      data-testid="ds-cardImage"
    >
      <div
        className="css-0"
        data-testid="ds-image"
        id="img-id-cardWithExtendedStyles"
      >
        <img
          alt="Alt text"
          className="css-1xdhyk6"
          id="img-id-cardWithExtendedStyles"
          src="https://images.nypl.org/index.php?id=swope_243048&t=r"
        />
      </div>
    </div>
    <div
      className="css-0"
      data-body={true}
    >
      <h2
        className="chakra-heading css-1u8qly9"
        data-testid="ds-heading"
        id="editioncardheading1"
        layout="column"
      >
        The Card Heading
      </h2>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardContent"
      >
        <div>
          Published in New York by Random House
        </div>
        <div>
          Written in English
        </div>
        <div>
          License: Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International
        </div>
      </div>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardActions"
      >
        <a
          className="chakra-link css-1xdhyk6"
          data-testid="ds-link"
          href="online"
          id="link-online"
          rel={null}
          target={null}
        >
          Read Online
        </a>
        <a
          className="chakra-link css-1xdhyk6"
          data-testid="ds-link"
          href="#url"
          id="link-icon"
          rel={null}
          target={null}
        >
          <svg
            aria-hidden={true}
            className="chakra-icon css-1vgifmd"
            data-file-name="SvgDownload"
            focusable={false}
            id="icon-cardWithExtendedStyles"
            role="img"
            title="download icon"
          />
          Download
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 3`] = `
<div
  className="edition-card css-1xdhyk6"
  data-testid="ds-card"
  id="cardWithNoCTAs"
>
  <div
    className="css-1xdhyk6"
    data-cardwrapper={true}
    data-testid="ds-cardWrapper"
  >
    <div
      className="css-0"
      data-imagewrapper={true}
      data-testid="ds-cardImage"
    >
      <div
        className="css-0"
        data-testid="ds-image"
        id="img-id-cardWithNoCTAs"
      >
        <img
          alt="Alt text"
          className="css-1xdhyk6"
          id="img-id-cardWithNoCTAs"
          src="https://images.nypl.org/index.php?id=swope_243048&t=r"
        />
      </div>
    </div>
    <div
      className="css-0"
      data-body={true}
    >
      <h2
        className="chakra-heading css-1u8qly9"
        data-testid="ds-heading"
        id="editioncardheading1"
        layout="column"
      >
        The Card Heading
      </h2>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardContent"
      >
        <p>
          Published in New York by Random House
        </p>
        <p>
          Written in English
        </p>
        <p>
          Under Creative Commons License
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 4`] = `
<div
  className="edition-card css-1xdhyk6"
  data-testid="ds-card"
  id="cardWithNoContent"
>
  <div
    className="css-1xdhyk6"
    data-cardwrapper={true}
    data-testid="ds-cardWrapper"
  >
    <div
      className="css-0"
      data-imagewrapper={true}
      data-testid="ds-cardImage"
    >
      <div
        className="css-0"
        data-testid="ds-image"
        id="img-id-cardWithNoContent"
      >
        <img
          alt="Alt text"
          className="css-1xdhyk6"
          id="img-id-cardWithNoContent"
          src="https://images.nypl.org/index.php?id=swope_243048&t=r"
        />
      </div>
    </div>
    <div
      className="css-0"
      data-body={true}
    >
      <h2
        className="chakra-heading css-1u8qly9"
        data-testid="ds-heading"
        id="editioncardheading1"
        layout="column"
      >
        <a
          className="chakra-link css-1xdhyk6"
          data-testid="ds-link"
          href="#edition-link"
          rel={null}
          target={null}
        >
          The Card Heading
        </a>
      </h2>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardActions"
      >
        <a
          className="chakra-link css-1xdhyk6"
          data-testid="ds-link"
          href="online"
          id="link-online"
          rel={null}
          target={null}
        >
          Read Online
        </a>
        <a
          className="chakra-link css-1xdhyk6"
          data-testid="ds-link"
          href="#url"
          id="link-icon"
          rel={null}
          target={null}
        >
          <svg
            aria-hidden={true}
            className="chakra-icon css-1vgifmd"
            data-file-name="SvgDownload"
            focusable={false}
            id="icon-cardWithNoContent"
            role="img"
            title="download icon"
          />
          Download
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 5`] = `
<div
  className="edition-card css-1xdhyk6"
  data-testid="ds-card"
  id="cardWithNoImage"
>
  <div
    className="css-1xdhyk6"
    data-cardwrapper={true}
    data-testid="ds-cardWrapper"
  >
    <div
      className="css-0"
      data-body={true}
    >
      <h2
        className="chakra-heading css-1u8qly9"
        data-testid="ds-heading"
        id="editioncardheading1"
        layout="column"
      >
        <a
          className="chakra-link css-1xdhyk6"
          data-testid="ds-link"
          href="#edition-link"
          rel={null}
          target={null}
        >
          The Card Heading
        </a>
      </h2>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardContent"
      >
        middle column content
      </div>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardActions"
      >
        <a
          className="chakra-link css-1xdhyk6"
          data-testid="ds-link"
          href="online"
          id="link-online"
          rel={null}
          target={null}
        >
          Read Online
        </a>
        <a
          className="chakra-link css-1xdhyk6"
          data-testid="ds-link"
          href="#url"
          id="link-icon"
          rel={null}
          target={null}
        >
          <svg
            aria-hidden={true}
            className="chakra-icon css-1vgifmd"
            data-file-name="SvgDownload"
            focusable={false}
            id="icon-cardWithNoImage"
            role="img"
            title="download icon"
          />
          Download
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 6`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-card"
  id="fullclick"
>
  <div
    className="chakra-linkbox css-uhbnde"
    data-cardwrapper={true}
    data-testid="ds-cardWrapper"
  >
    <div
      className="css-0"
      data-imagewrapper={true}
      data-testid="ds-cardImage"
    >
      <div
        className="css-0"
        data-testid="ds-image"
        id="img-id-fullclick"
      >
        <img
          alt="Alt text"
          className="css-1xdhyk6"
          id="img-id-fullclick"
          src="https://images.nypl.org/index.php?id=swope_243048&t=r"
        />
      </div>
    </div>
    <div
      className="css-0"
      data-body={true}
    >
      <h3
        className="chakra-heading css-1u8qly9"
        data-testid="ds-heading"
        id="heading1"
        layout="column"
      >
        <a
          className="chakra-linkbox__overlay css-1hnz6hu"
          data-testid="ds-cardLinkOverlay"
          href="http://nypl.org"
        >
          The Card Heading
        </a>
      </h3>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardContent"
      >
        middle column content
      </div>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardActions"
      >
        <button
          className="chakra-button css-1xdhyk6"
          data-testid="ds-button"
          id="button1"
          onClick={[Function]}
          type="submit"
        >
          Example CTA
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 7`] = `
<div
  className="css-1xdhyk6"
  data-testid="ds-card"
  id="cardID"
>
  <div
    className="css-1xdhyk6"
    data-cardwrapper={true}
    data-testid="ds-cardWrapper"
  >
    <div
      className="css-0"
      data-imagewrapper={true}
      data-testid="ds-cardImage"
    >
      <div
        className="css-0"
        data-testid="ds-image"
        id="img-id-cardWithRightActions"
      >
        <img
          alt="Alt text"
          className="css-1xdhyk6"
          id="img-id-cardWithRightActions"
          src="https://images.nypl.org/index.php?id=swope_243048&t=r"
        />
      </div>
    </div>
    <div
      className="css-0"
      data-body={true}
    >
      <h3
        className="chakra-heading css-1u8qly9"
        data-testid="ds-heading"
        id="heading1"
        layout="column"
      >
        The Card Heading
      </h3>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardContent"
      >
        middle column content
      </div>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardActions"
      >
        <button
          className="chakra-button css-1xdhyk6"
          data-testid="ds-button"
          id="button1"
          onClick={[Function]}
          type="submit"
        >
          Example CTA
        </button>
      </div>
      <div
        className="css-1xdhyk6"
        data-testid="ds-cardActions"
      >
        <button
          className="chakra-button css-1xdhyk6"
          data-testid="ds-button"
          id="button2"
          onClick={[Function]}
          type="submit"
        >
          Example CTA
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 8`] = `
<div
  className="css-1t0bvx9"
  data-testid="ds-card"
  id="chakraProps"
>
  <div
    className="css-1xdhyk6"
    data-cardwrapper={true}
    data-testid="ds-cardWrapper"
  >
    <div
      className="css-0"
      data-imagewrapper={true}
      data-testid="ds-cardImage"
    >
      <div
        className="css-0"
        data-testid="ds-image"
        id="img-id-chakraProps"
      >
        <img
          alt="Alt text"
          className="css-1xdhyk6"
          id="img-id-chakraProps"
          src="https://images.nypl.org/index.php?id=swope_243048&t=r"
        />
      </div>
    </div>
    <div
      className="css-0"
      data-body={true}
    >
      <h3
        className="chakra-heading css-1dti2w"
        data-testid="ds-heading"
        id="heading1"
        layout="column"
      >
        The Card Heading
      </h3>
      <div
        className="css-1rn2qcq"
        data-testid="ds-cardContent"
      >
        middle column content
      </div>
      <div
        className="css-1avkygu"
        data-testid="ds-cardActions"
      >
        <button
          className="chakra-button css-1xdhyk6"
          data-testid="ds-button"
          id="button1"
          onClick={[Function]}
          type="submit"
        >
          Example CTA
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card Renders the UI snapshot correctly 9`] = `
<div
  className="css-1xdhyk6"
  data-testid="card-testid"
  id="otherProps"
>
  <div
    className="css-1xdhyk6"
    data-cardwrapper={true}
    data-testid="ds-cardWrapper"
  >
    <div
      className="css-0"
      data-imagewrapper={true}
      data-testid="ds-cardImage"
    >
      <div
        className="css-0"
        data-testid="ds-image"
        id="img-id-otherProps"
      >
        <img
          alt="Alt text"
          className="css-1xdhyk6"
          id="img-id-otherProps"
          src="https://images.nypl.org/index.php?id=swope_243048&t=r"
        />
      </div>
    </div>
    <div
      className="css-0"
      data-body={true}
    >
      <h3
        className="chakra-heading css-1dti2w"
        data-testid="ds-heading"
        id="heading1"
        layout="column"
      >
        The Card Heading
      </h3>
      <div
        className="css-1xdhyk6"
        data-testid="cardcontent-testid"
      >
        middle column content
      </div>
      <div
        className="css-1xdhyk6"
        data-testid="cardaction-testid"
      >
        <button
          className="chakra-button css-1xdhyk6"
          data-testid="ds-button"
          id="button1"
          onClick={[Function]}
          type="submit"
        >
          Example CTA
        </button>
      </div>
    </div>
  </div>
</div>
`;
